--- a/static/website/css/style.css
+++ b/static/website/css/style.css
@@ -748,6 +748,7 @@ h1, h2, h3, h4, h5,
     position: absolute;
     top: 10%;
     left: 10%;
+    right: 10%;
     z-index: 2;
     opacity: 0;
     visibility: hidden;
